# Genslm-ESM-Pepmlm

./: .pre-commit-config.yaml  Makefile  README.md  dataset.py  embedding.ipynb  pyproject.toml  setup.cfg  tox.ini  train.py  weight_watcher.py
configs/150m/: aminoacid_150m.yaml  codon_150m.yaml  contrastive_150m.yaml  joint_150m.yaml
configs/35m/: aminoacid_35m.yaml  codon_35m.yaml  contrastive_35m.yaml  joint_35m.yaml
configs/3b/: aminoacid_3b.yaml  codon_3b.yaml  contrastive_3b.yaml  joint_3b.yaml
configs/650m/: aminoacid_650m.yaml  codon_650m.yaml  contrastive_650m.yaml  joint_650m.yaml
configs/8m/: aminoacid_8m.yaml  codon_8m.yaml  contrastive_8m.yaml  joint_8m.yaml
configs/ec-v1/: ec_aminoacid_8m.yaml  ec_codon_8m.yaml  ec_contrastive_150m.yaml  ec_contrastive_35m.yaml  ec_contrastive_8m.yaml  ec_test_config.yaml
configs/nf-8/: joint_35m.yaml  joint_8m.yaml
examples/: esm.ipynb  genslm_esmc_example.py  genslm_hf_example.py  run_genslm_esmc_inference.py  upload_to_hf.py
examples/ec/: data.ipynb  ec_labels.ipynb  embeddings_copy.ipynb  gc_content.ipynb  loss_curves.ipynb  melting_point.ipynb  polaris-pbs-v2.sh  polaris-pbs.sh
examples/ec/base_esm_configs/: esm2_t12_35M_UR50D_config.json  esm2_t6_8M_UR50D_config.json
examples/ec/deepspeed_configs/: deepspeed_ddp_dynamo_gradient_accumulation.yaml  deepspeed_ddp_dynamo_single_node.yaml
examples/ec/ec_data_v1/: ec_v1_train_labels.npy  ec_v1_valid_labels.npy
examples/ec/hpc-submit/: ec_contrastive_8m.sh
examples/ec/loss_curves/: ec_codon_150m.csv  ec_codon_35m.csv  ec_codon_650m.csv  ec_codon_8m.csv  ec_contrastive_150m.csv
examples/ec/submit_scripts/: ec_aminoacid_150m_pbs.sh  ec_aminoacid_35m_pbs.sh  ec_aminoacid_650m_pbs.sh  ec_aminoacid_8m_pbs.sh  ec_codon_150m_pbs.sh  ec_codon_35m_pbs.sh  ec_codon_650m_pbs.sh  ec_codon_8m_pbs.sh  ec_contrastive_150m_pbs.sh  ec_contrastive_35m.sh  ec_contrastive_650m_gradacc_pbs.sh  ec_contrastive_650m_pbs.sh  ec_contrastive_8m_pbs.sh  (+13 more)
examples/patric/: loss_curves.ipynb
genslm-esm-training/: README.md  pyproject.toml
genslm-esm-training/examples/: run_genslm_esmc_inference.py
genslm-esm-training/genslm_esm_training/: __init__.py  cli.py  embedding.py  esmfold.py  isotropy.py  masking_scheduler.py  modeling_esm.py  modeling_esm_v2.py  modeling_esm_v3.py  modeling_esmc.py  refseq_dataset.py  tm_align.py  tokenizer.py  train.py  train_refseq.py  utils.py
genslm-esm-training/scripts/: convert_esmc2genslmesm.py  convert_parquet_hdf5_datasets.py  upload_to_hf.py  weight_watcher.py
genslm-esm-training/tokenizer_esm_genslm/: added_tokens.json
genslm_esm/: __init__.py  cli.py  configuration.py  convert_esmc2genslmesm.py  convert_parquet_hdf5_datasets.py  data.py  dataset.py  embedding.py  esmfold.py  isotropy.py  masking_scheduler.py  modeling.py  modeling_esm.py  modeling_esm_v2.py  modeling_esm_v3.py  modeling_esmc.py  refseq_dataset.py  tm_align.py  tokenizer.py  train.py  train_refseq.py  train_v2.py  utils.py  weight_watcher.py
genslm_esm/models/: configuration.py  modeling.py
genslm_esm/tokenizer_esmc_genslm/: tokenizer.json
mdh_application/: embedding.ipynb
mdh_application/weight_watcher/: details.csv
requirements/: requirements.txt
scripts/: convert_esmc2genslmesm.py  convert_parquet_hdf5_datasets.py  upload_to_hf.py  weight_watcher.py
tests/: test_data.py  test_dataset.py
(+218 files in other folders)
